# govno

./: .gitignore  README.md  db.sqlite3  pyproject.toml  req.py  requirements.txt
api/: serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  views.py
fastapi/: fastapi_app.py  urls_fastapi.py
reports/: admin.py  csrf.py  forms.py  middleware.py  models.py  serializers.py  tests.py  urls.py  utils.py  views copy.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_activity_planned_deadline.py  0003_alter_activity_planned_deadline.py  0004_alter_activity_planned_deadline.py  0005_tableone_tabletwo_remove_financialreport_activity_and_more.py  0006_tableone_diff_reason.py  0007_tabletwo_mb_actually_tabletwo_mb_set_tabletwo_name_and_more.py  0007_tabletwo_name.py  0008_alter_tableone_diff_reason.py  0009_remove_tabletwo_total_actually_and_more.py  0010_initialdata_tablethree_remove_tableone_name_and_more.py  0010_merge_20240913_0042.py  0011_alter_tabletwo_mb_actually_alter_tabletwo_mb_set_and_more.py  0011_tableone_init_tabletwo_init.py  0012_tabletwo_rb_actually_alter_tabletwo_mb_actually_and_more.py  0013_initialdata_rb_set_alter_initialdata_mb_set_and_more.py  0014_tablethree_init.py  0015_alter_initialdata_mb_set_alter_initialdata_rb_set_and_more.py
reports/services/: base.py  logic.py  view_services.py
reports/templates/reports/: activity_detail.html  activity_edit.html  activity_list.html  base.html  edit_tableone.html  edit_tabletwo.html  (+8 more)
reports/tests/: test_models.py  test_serializers.py  test_urls.py  test_views.py
(+4 files in other folders)
